# monkey_challenge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
notebooks/: monkey_colab.ipynb
results/: eda_summary.json  kan_interpretability_summary.json  metrics.json  metrics_kan.json  metrics_noaug.json
scripts/: fig_detection.py  fig_domain_generalization.py  fig_eda.py  fig_froc.py  fig_kan_interpretability.py  figstyle.py  make_figures.py
src/monkey/: __init__.py  checkpoint.py  cli.py  config.py  data.py  detect.py  evaluate.py  froc.py  kan.py  metrics.py  model.py  targets.py  train.py
tests/: conftest.py  test_data.py  test_detect.py  test_froc.py  test_metrics.py  test_model.py  test_targets.py
