[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monkey-challenge"
version = "0.1.0"
description = "Multi-centre inflammatory-cell detection in PAS kidney biopsies (MONKEY)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "m-logviniuk" }]
dependencies = [
    "torch>=2.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
monkey = "monkey.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
